<?xml version="1.0"?>
<package format="2">
  <name>ArduSim</name>
  <version>0.0.0</version>
  <description>ArduSim: Basic Package for running ArduPilot Simulations with ROS and Gazebo</description>

  <maintainer email="">fabeha-raheel</maintainer>
  <license>MIT</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <url type="website">https://github.com/fabeha-raheel/ArduSim</url>
  <author email="jane.doe@example.com">Fabeha Raheel</author>
  <author email="jane.doe@example.com">Hassan Mehmood</author>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
    <gazebo_ros gazebo_media_path="${prefix}/models"/>
  </export>
</package>
